styles/globals.css
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");

html,
body {
  padding: 0;
  margin: 0;
  font-size: 15pt;
}

* {
  box-sizing: border-box;
}

body,
input,
select,
textarea {
  color: #fff;
  font-family: "Source Sans Pro", sans-serif;
  font-size: 1em;
  font-weight: 300;
  letter-spacing: -0.025em;
  line-height: 1.75em;
}

nav ul {
  list-style: none;
  padding: 0;
}

main {
  padding: 5rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
}

.container {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Footer */
footer {
  background-image: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0),
    rgba(0, 0, 0, 0.5) 75%
  );
  bottom: 0;
  cursor: default;
  left: 0;
  text-align: center;
  width: 100%;
}

footer p {
  font-size: 0.8em;
  margin: 6px;
}

/* Background */

html {
  background-color: #348cb2;
  background-image: url("images/bg.jpg");
  background-position: bottom left;
  background-repeat: repeat-x;
  background-size: 2250px cover;
  background-attachment: fixed;
  animation: 50s para infinite linear;
}
@keyframes para {
  100% {
    background-position: -2250px bottom, top left, center center;
  }
}

/* overlay glass */

body::before {
  content: "";
  background-attachment: fixed, fixed;
  background-image: url("images/overlay-pattern.png"), url("images/overlay.svg");
  background-position: top left, center center;
  background-repeat: repeat, no-repeat;
  background-size: auto, cover;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  opacity: 0;
  animation: overlay 1.5s 1.5s forwards;
}
@keyframes overlay {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

/* name header */
main h1 {
  margin: 0;
  font-size: 4.35em;
  font-weight: 900;
  letter-spacing: -0.035em;
  line-height: 1em;
}

/* tagline */
main p {
  font-size: 1.25em;
  margin: 0.75em 0.5em 0.25em 0.5em;
  opacity: 0.75;
}

/* links list */
nav {
  margin: 1.5em 0 0 0;
}

nav li {
  display: inline-block;
  top: 0;
  padding: 0.4rem;
}

nav a:hover {
  transform: scale(1.1);
}

nav a:hover {
  background-color: rgba(255, 255, 255, 0.175);
  color: #fff;
}

nav a:active {
  transform: scale(0.95);
  background: none;
}

nav a:active {
  background-color: rgba(255, 255, 255, 0.35);
  color: #fff;
}

/* Icon */
.icon {
  display: inline-block;
  font-style: normal;
  font-variant: normal;
  text-rendering: auto;

  border-radius: 100%;
  border: solid 1px #fff;
  font-size: 2.5em;
  text-align: center;
  top: 0;
  line-height: 2em;
  width: 2em;
  height: 2em;
  color: #fff;
}

.icon > .label {
  display: none;
}

